--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -25,9 +25,11 @@ jobs:
           echo "GHCR_REPO=ghcr.io/${OWNER,,}/${REPO_NAME,,}" >> $GITHUB_OUTPUT
           echo "${{ secrets.ENV }}" >> $GITHUB_OUTPUT
       - uses: actions/checkout@v2
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
       - name: Set up docker buildx
         id: buildx
-        uses: docker/setup-buildx-action@v1
+        uses: docker/setup-buildx-action@v3
       - name: Cache docker layers
         uses: actions/cache@v2
         with:
@@ -36,15 +38,16 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-buildx-
       - name: Login to ghcr
-        uses: docker/login-action@v1
+        uses: docker/login-action@v3
         with:
           registry: ghcr.io
           username: ${{ steps.env.outputs.OWNER }}
           password: ${{ secrets.GHCR_TOKEN }}
       - name: Build and Push
         id: docker_build
-        uses: docker/build-push-action@v2
+        uses: docker/build-push-action@v5
         with:
           builder: ${{ steps.buildx.outputs.name }}
-          push: true
+          platforms: linux/amd64,linux/arm64
           tags: ${{ steps.env.outputs.GHCR_REPO }}:latest
+          push: true
